--- a/index.html
+++ b/index.html
@@ -1,133 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Hand Gesture Car Game</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Hand Gesture Game</title>
   <style>
     body {
       margin: 0;
-      overflow: hidden;
+      font-family: Arial, sans-serif;
       background: #111;
-      color: white;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      gap: 20px;
-      flex-direction: column;
+      color: #fff;
+      padding: 20px;
     }
+
     h1 {
-      font-family: sans-serif;
-      font-size: 24px;
-      margin: 0;
+      text-align: center;
+      margin-bottom: 10px;
     }
-    /* Hide the raw video element */
-    video {
-      display: none;
+
+    .instructions {
+      text-align: center;
+      font-size: 1.1rem;
+      margin-bottom: 20px;
+      color: #ccc;
     }
-    /* Canvases side by side */
+
     .container {
       display: flex;
+      flex-direction: row;
       gap: 20px;
+      justify-content: center;
+      align-items: flex-start;
+      flex-wrap: wrap;
     }
-    #handCanvas, #gameCanvas {
-      width: 640px;
-      height: 480px;
-      background: #222;
-      border-radius: 10px;
-      border: 2px solid #444;
+
+    .video-container, .game-container {
+      flex: 1;
+      min-width: 300px;
+      max-width: 600px;
+    }
+
+    canvas, video {
+      width: 100%;
+      height: auto;
+      border-radius: 12px;
+      box-shadow: 0 0 15px rgba(255, 255, 255, 0.1);
+    }
+
+    @media (max-width: 768px) {
+      .container {
+        flex-direction: column;
+        align-items: center;
+      }
     }
   </style>
 </head>
 <body>
-  <h1>🖐️ Hand Gesture Car Game</h1>
-  <div class="container">
-    <!-- hidden video feeds into handCanvas -->
-    <video id="video" width="640" height="480" autoplay></video>
-    <canvas id="handCanvas" width="640" height="480"></canvas>
 
-    <!-- game canvas next to it -->
-    <canvas id="gameCanvas" width="640" height="480"></canvas>
+  <h1>🖐️ Hand Gesture Game 🚗</h1>
+  <div class="instructions">
+    Move your hand in front of the camera to control the car in the game.<br>
+    Use your **left hand** to move left and **right hand** to move right.<br>
+    Works best in good lighting. Try using your webcam!
   </div>
 
-  <!-- MediaPipe + TensorFlow.js -->
-  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands/hands.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils/drawing_utils.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.min.js"></script>
+  <div class="container">
+    <div class="video-container">
+      <video id="webcam" autoplay playsinline></video>
+    </div>
+    <div class="game-container">
+      <canvas id="gameCanvas" width="640" height="480"></canvas>
+    </div>
+  </div>
 
-  <script>
-    // Elements
-    const video = document.getElementById('video');
-    const handCanvas = document.getElementById('handCanvas');
-    const handCtx = handCanvas.getContext('2d');
-    const gameCanvas = document.getElementById('gameCanvas');
-    const gameCtx = gameCanvas.getContext('2d');
+  <script type="module">
+    import { HandLandmarker, FilesetResolver } from "https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@0.10.0";
 
-    // Game state
-    const car = { x: 320, y: 420, w: 60, h: 30, color: 'red' };
-    let move = 'stop';
+    const video = document.getElementById("webcam");
+    const canvas = document.getElementById("gameCanvas");
+    const ctx = canvas.getContext("2d");
 
-    // Draw and update game
-    function drawGame() {
-      gameCtx.clearRect(0, 0, gameCanvas.width, gameCanvas.height);
-      gameCtx.fillStyle = car.color;
-      gameCtx.fillRect(car.x, car.y, car.w, car.h);
-    }
-    function updateGame() {
-      if (move === 'left')  car.x -= 5;
-      if (move === 'right') car.x += 5;
-      car.x = Math.max(0, Math.min(gameCanvas.width - car.w, car.x));
-    }
-    function gameLoop() {
-      updateGame();
-      drawGame();
-      requestAnimationFrame(gameLoop);
-    }
+    const car = { x: canvas.width / 2 - 25, y: canvas.height - 60, width: 50, height: 30, speed: 5 };
 
-    // Count extended fingers
-    function countFingers(landmarks) {
-      const tips = [8,12,16,20];
-      let cnt = 0;
-      tips.forEach(i => {
-        if (landmarks[i].y < landmarks[i-2].y) cnt++;
+    let handLandmarker;
+
+    async function setupCamera() {
+      const stream = await navigator.mediaDevices.getUserMedia({ video: true });
+      video.srcObject = stream;
+      return new Promise((resolve) => {
+        video.onloadedmetadata = () => {
+          resolve();
+        };
       });
-      return cnt;
     }
 
-    // MediaPipe Hands setup
-    const hands = new Hands({
-      locateFile: f => `https://cdn.jsdelivr.net/npm/@mediapipe/hands/${f}`
-    });
-    hands.setOptions({
-      maxNumHands: 1,
-      modelComplexity: 0,
-      minDetectionConfidence: 0.7,
-      minTrackingConfidence: 0.7
-    });
+    async function loadHandLandmarker() {
+      const vision = await FilesetResolver.forVisionTasks("https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@0.10.0/wasm");
+      handLandmarker = await HandLandmarker.createFromOptions(vision, {
+        baseOptions: { modelAssetPath: `https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@0.10.0/wasm/hand_landmarker.task` },
+        runningMode: "VIDEO",
+        numHands: 2,
+      });
+    }
 
-    hands.onResults(results => {
-      // draw camera frame onto handCanvas
-      handCtx.clearRect(0,0,handCanvas.width,handCanvas.height);
-      handCtx.drawImage(results.image, 0, 0, handCanvas.width, handCanvas.height);
+    function drawCar() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      ctx.fillStyle = "#00ff88";
+      ctx.fillRect(car.x, car.y, car.width, car.height);
+    }
 
-      if (results.multiHandLandmarks.length) {
-        const lm = results.multiHandLandmarks[0];
-        drawConnectors(handCtx, lm, HAND_CONNECTIONS, { color:'#0f0', lineWidth:3 });
-        drawLandmarks(handCtx, lm, { color:'#f00', lineWidth:2 });
-        const f = countFingers(lm);
-        move = (f===1) ? 'left' : (f===2) ? 'right' : 'stop';
-      } else {
-        move = 'stop';
+    function detectHandsAndMoveCar() {
+      if (!handLandmarker) return;
+      const detections = handLandmarker.detectForVideo(video, performance.now());
+      if (detections.handednesses.length > 0) {
+        for (const handedness of detections.handednesses) {
+          const label = handedness[0].categoryName;
+          if (label === "Right") car.x += car.speed;
+          else if (label === "Left") car.x -= car.speed;
+        }
       }
-    });
 
-    // Start camera and game
-    const camera = new Camera(video, {
-      onFrame: async () => { await hands.send({ image: video }); },
-      width: 640, height: 480
-    });
-    camera.start();
-    gameLoop();
+      // Keep the car within bounds
+      car.x = Math.max(0, Math.min(canvas.width - car.width, car.x));
+      drawCar();
+    }
+
+    async function main() {
+      await setupCamera();
+      await loadHandLandmarker();
+      video.play();
+      drawCar();
+
+      setInterval(detectHandsAndMoveCar, 100);
+    }
+
+    main();
   </script>
+
 </body>
 </html>
