--- a/index.html
+++ b/index.html
@@ -3,139 +3,159 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hand Gesture Game</title>
+  <title>Hand Gesture Car Game</title>
   <style>
     body {
       margin: 0;
+      padding: 20px;
       font-family: Arial, sans-serif;
       background: #111;
       color: #fff;
-      padding: 20px;
     }
-
     h1 {
       text-align: center;
       margin-bottom: 10px;
     }
-
     .instructions {
       text-align: center;
-      font-size: 1.1rem;
       margin-bottom: 20px;
       color: #ccc;
+      font-size: 1.1rem;
     }
-
     .container {
       display: flex;
-      flex-direction: row;
+      flex-wrap: wrap;
       gap: 20px;
       justify-content: center;
       align-items: flex-start;
-      flex-wrap: wrap;
     }
-
     .video-container, .game-container {
       flex: 1;
       min-width: 300px;
-      max-width: 600px;
+      max-width: 640px;
     }
-
-    canvas, video {
+    /* hide the raw video element */
+    video {
+      display: none;
+    }
+    canvas {
       width: 100%;
       height: auto;
-      border-radius: 12px;
-      box-shadow: 0 0 15px rgba(255, 255, 255, 0.1);
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(255,255,255,0.1);
+      background: #222;
     }
-
     @media (max-width: 768px) {
       .container {
         flex-direction: column;
-        align-items: center;
       }
     }
   </style>
 </head>
 <body>
 
-  <h1>🖐️ Hand Gesture Game 🚗</h1>
+  <h1>🖐️ Hand Gesture Car Game 🚗</h1>
   <div class="instructions">
-    Move your hand in front of the camera to control the car in the game.<br>
-    Use your **left hand** to move left and **right hand** to move right.<br>
-    Works best in good lighting. Try using your webcam!
+    Raise <b>1 finger</b> to move left, <b>2 fingers</b> to move right,<br>
+    and <b>0 fingers</b> (fist) to stop.<br>
+    Allow webcam access and play in good lighting!
   </div>
 
   <div class="container">
     <div class="video-container">
-      <video id="webcam" autoplay playsinline></video>
+      <!-- hidden video for MediaPipe input -->
+      <video id="video" width="640" height="480" autoplay playsinline></video>
+      <!-- processed feed with landmarks -->
+      <canvas id="handCanvas" width="640" height="480"></canvas>
     </div>
     <div class="game-container">
       <canvas id="gameCanvas" width="640" height="480"></canvas>
     </div>
   </div>
 
-  <script type="module">
-    import { HandLandmarker, FilesetResolver } from "https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@0.10.0";
+  <!-- MediaPipe Hands + Utilities -->
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands/hands.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils/drawing_utils.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.min.js"></script>
 
-    const video = document.getElementById("webcam");
-    const canvas = document.getElementById("gameCanvas");
-    const ctx = canvas.getContext("2d");
+  <script>
+    // Elements
+    const video = document.getElementById('video');
+    const handCanvas = document.getElementById('handCanvas');
+    const handCtx = handCanvas.getContext('2d');
+    const gameCanvas = document.getElementById('gameCanvas');
+    const gameCtx = gameCanvas.getContext('2d');
 
-    const car = { x: canvas.width / 2 - 25, y: canvas.height - 60, width: 50, height: 30, speed: 5 };
+    // Game state
+    const car = { x: 320, y: 420, w: 60, h: 30, color: 'red' };
+    let move = 'stop';
 
-    let handLandmarker;
-
-    async function setupCamera() {
-      const stream = await navigator.mediaDevices.getUserMedia({ video: true });
-      video.srcObject = stream;
-      return new Promise((resolve) => {
-        video.onloadedmetadata = () => {
-          resolve();
-        };
-      });
+    // Game draw/update
+    function drawGame() {
+      gameCtx.clearRect(0, 0, gameCanvas.width, gameCanvas.height);
+      gameCtx.fillStyle = car.color;
+      gameCtx.fillRect(car.x, car.y, car.w, car.h);
+    }
+    function updateGame() {
+      if (move === 'left')  car.x -= 5;
+      else if (move === 'right') car.x += 5;
+      // clamp
+      car.x = Math.max(0, Math.min(gameCanvas.width - car.w, car.x));
+    }
+    function gameLoop() {
+      updateGame();
+      drawGame();
+      requestAnimationFrame(gameLoop);
     }
 
-    async function loadHandLandmarker() {
-      const vision = await FilesetResolver.forVisionTasks("https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@0.10.0/wasm");
-      handLandmarker = await HandLandmarker.createFromOptions(vision, {
-        baseOptions: { modelAssetPath: `https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@0.10.0/wasm/hand_landmarker.task` },
-        runningMode: "VIDEO",
-        numHands: 2,
-      });
-    }
-
-    function drawCar() {
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-      ctx.fillStyle = "#00ff88";
-      ctx.fillRect(car.x, car.y, car.width, car.height);
-    }
-
-    function detectHandsAndMoveCar() {
-      if (!handLandmarker) return;
-      const detections = handLandmarker.detectForVideo(video, performance.now());
-      if (detections.handednesses.length > 0) {
-        for (const handedness of detections.handednesses) {
-          const label = handedness[0].categoryName;
-          if (label === "Right") car.x += car.speed;
-          else if (label === "Left") car.x -= car.speed;
-        }
+    // count extended fingers (index→pinky)
+    function countFingers(landmarks) {
+      const tips = [8, 12, 16, 20];
+      let cnt = 0;
+      for (let tip of tips) {
+        if (landmarks[tip].y < landmarks[tip - 2].y) cnt++;
       }
-
-      // Keep the car within bounds
-      car.x = Math.max(0, Math.min(canvas.width - car.width, car.x));
-      drawCar();
+      return cnt;
     }
 
-    async function main() {
-      await setupCamera();
-      await loadHandLandmarker();
-      video.play();
-      drawCar();
+    // MediaPipe Hands setup
+    const hands = new Hands({
+      locateFile: f => `https://cdn.jsdelivr.net/npm/@mediapipe/hands/${f}`
+    });
+    hands.setOptions({
+      maxNumHands: 1,
+      modelComplexity: 1,
+      minDetectionConfidence: 0.7,
+      minTrackingConfidence: 0.7
+    });
 
-      setInterval(detectHandsAndMoveCar, 100);
-    }
+    hands.onResults(results => {
+      // draw camera frame
+      handCtx.clearRect(0, 0, handCanvas.width, handCanvas.height);
+      handCtx.drawImage(results.image, 0, 0, handCanvas.width, handCanvas.height);
 
-    main();
+      // default
+      move = 'stop';
+
+      if (results.multiHandLandmarks && results.multiHandLandmarks.length) {
+        const lm = results.multiHandLandmarks[0];
+        // draw landmarks
+        drawConnectors(handCtx, lm, HAND_CONNECTIONS, { color: '#0f0', lineWidth: 2 });
+        drawLandmarks(handCtx, lm, { color: '#f00', lineWidth: 1 });
+        // count fingers
+        const f = countFingers(lm);
+        if (f === 1) move = 'left';
+        else if (f === 2) move = 'right';
+      }
+    });
+
+    // start camera & game
+    const camera = new Camera(video, {
+      onFrame: async () => { await hands.send({ image: video }); },
+      width: 640, height: 480
+    });
+    camera.start();
+    gameLoop();
   </script>
-
 </body>
 </html>
